完成了查询题目具体信息的代码完善，测试通过，可以通过切片AOP进行代码的优化。